--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.18.0",
     "http-proxy-middleware": "^0.19.1",
     "popper.js": "^1.14.7",
+    "vcolorpicker": "^0.1.8",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
